fictional army : second exercise filtering sorting pandas

--- a/02_Filtering_Sorting/Chipotle/Untitled.ipynb
+++ b/02_Filtering_Sorting/Chipotle/Untitled.ipynb
@@ -1694,13 +1694,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how many times did someone order more than one canned soda\n",
+    "df[(df['item_name'] == \"Canned Soda\") & (df['quantity'] > 1)].shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# how many times did someone order more than one canned soda\n",
-    "df[(df['item_name'] == \"Canned Soda\") && ()]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
